# knobs

./: Cargo.toml  README.md  rustfmt.toml
src/: group.rs  lib.rs  profile.rs
src/app/: mod.rs
src/app/parser/: bool.rs  cpu.rs  drm.rs  frequency.rs  mod.rs  number.rs  power.rs  time.rs
src/applet/: mod.rs
src/applet/cpu/: args.rs  format.rs  mod.rs  run.rs  summary.rs
src/applet/drm/: mod.rs  summary.rs
src/applet/i915/: args.rs  format.rs  mod.rs  run.rs  summary.rs
src/applet/install/: args.rs  mod.rs  run.rs
src/applet/nvml/: args.rs  format.rs  mod.rs  run.rs  summary.rs
src/applet/rapl/: args.rs  format.rs  mod.rs  run.rs  summary.rs
src/cli/: group.rs  mod.rs
src/cli/parser/: bool.rs  cpu.rs  drm.rs  frequency.rs  mod.rs  number.rs  power.rs  rapl.rs  time.rs
src/cpu/: args.rs  mod.rs  table.rs
src/drm/: mod.rs  table.rs
src/i915/: args.rs  mod.rs  table.rs
src/nvml/: args.rs  mod.rs  table.rs
src/rapl/: args.rs  mod.rs  table.rs
src/util/: convert.rs  counter.rs  cpu.rs  drm.rs  env.rs  format.rs  io.rs  mod.rs  once.rs
