[package]
name = "knobs"
version = "0.5.1"
edition = "2021"
homepage = "https://github.com/ecks0/knobs"
license = "MIT"
authors = ["eckso <eckso@eckso.io>"]

[dependencies]
async-trait = "~0.1"
clap = { version = "~3.0", features = ["cargo"] }
comfy-table = "~5.0"
futures = "~0.3"
measurements = "~0.10"
regex = "~1.5"
syx = { git = "https://github.com/ecks0/syx", features = ["nvml"] }
thiserror = "~1.0"

[dependencies.tokio]
version = "~1.15"
default-features = false
features = [
  "io-std",
  "io-util",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "time",
]
