[package]
name = "knobs"
version = "0.5.3"
edition = "2021"
homepage = "https://github.com/ecks0/knobs"
license = "MIT"
authors = ["eckso <eckso@eckso.io>"]

[dependencies]
async-trait = "~0.1"
chrono = "~0.4"
clap = { version = "~3.0", features = ["cargo"] }
comfy-table = "~5.0"
env_logger = "~0.9"
futures = "~0.3"
log = "~0.4"
measurements = "~0.10"
regex = "~1.5"
thiserror = "~1.0"

[dependencies.syx]
#git = "https://github.com/ecks0/syx"
#rev = "v0.6.0"
path = "/home/user/src/syx"
features = ["logging", "nvml"]

[dependencies.tokio]
version = "~1.15"
default-features = false
features = [
  "io-std",
  "io-util",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "time",
]
